k8s/nodeport-service.yaml
# springboot-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-hello-nodeport
  namespace: dev-namespace
  labels:
    app: springboot-hello
spec:
  type: NodePort
  selector:
    app: springboot-hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
    name: http
